fixed spacing

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -115,10 +115,10 @@ li {
     transition: 0.3s;
     border-radius: 5px;
     width: 30em;
-    height: 30em;
+    height: 28em;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
     padding: 4%;
@@ -128,9 +128,9 @@ li {
     width: 100%;
     height: 18rem;
     object-fit: cover;
+    justify-self: normal;
     border-radius: 5px 5px 5px 5px;
 }
-
 
 @media screen and (max-width: 500px) {
   .card {
@@ -308,7 +308,7 @@ hr {
 
 footer {
     position: relative;
-    bottom: 0;
+    bottom: -50px;
     padding: 1%;
 }
 
